syntax = "proto3";

package project.v2;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "paperdebugger/pkg/gen/api/project/v2;projectv2";

service ProjectService {
  rpc UpsertProject(UpsertProjectRequest) returns (UpsertProjectResponse) {
    option (google.api.http) = {
      put: "/_pd/api/v2/projects/{project_id}"
      body: "*"
    };
  }
  rpc GetProject(GetProjectRequest) returns (GetProjectResponse) {
    option (google.api.http) = {get: "/_pd/api/v2/projects/{project_id}"};
  }
}

message Project {
  string id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  string name = 4;
  string root_doc_id = 5;
  ProjectFolder root_folder = 6;
  string instructions = 7;
}

message ProjectFolder {
  string id = 1;
  string name = 2;
  repeated ProjectDoc docs = 3;
  repeated ProjectFolder folders = 4;
}

message ProjectDoc {
  string id = 1;
  int32 version = 2;
  string filename = 3;
  string filepath = 4;
  repeated string lines = 5;
}

message UpsertProjectRequest {
  string project_id = 1;
  string name = 2;
  string root_doc_id = 3;
  ProjectFolder root_folder = 4;
  string instructions = 5;
}

message UpsertProjectResponse {
  Project project = 1;
}

message GetProjectRequest {
  string project_id = 1;
}

message GetProjectResponse {
  Project project = 1;
}
